<resources>
    <string name="app_name">Drifter</string>

    <!--Labels-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="preferred_measurement_system">Preferred Measurement System</string>

    <!--Buttons-->
    <string name="submit">Submit</string>

    <!--Registration Activity-->
    <string name="register">Register</string>
    <string name="to_login">Already Registered? Tap Here!</string>


    <!--Login Activity-->
    <string name="login">Login</string>
    <string name="to_register">Have Not Registered an Account Yet? Tap Here!</string>

    <!--Map view Activity-->
    <string name="map_view_title">Map View</string>

    <!--Profile Settings Activity-->
    <string name="profile_title">Profile Settings</string>

    <!--Trip Log Activity-->
    <string name="trip_log_title">Trip Log</string>

    <!--Nav Drawer Items-->
    <string name="drawer_item_map_view">Map View</string>
    <string name="drawer_item_profile">Profile Settings</string>
    <string name="drawer_item_trip_log">Trip Log</string>
    <string name="drawer_item_sign_out">Sign Out</string>
    <string name="full_name">Full Name</string>
    <string name="please_provide_your_full_name_here">Please provide your full name here</string>
    <string name="map_style">Current Map Style</string>
    <string name="select_style">Select Map Style</string>
    <string name="default_text">default</string>

    <!--Default style names-->
    <string name="menu_map_style_streets">Streets</string>
    <string name="menu_map_style_dark">Dark</string>
    <string name="menu_map_style_light">Light</string>
    <string name="menu_map_style_outdoors">Outdoors</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite streets</string>
    <string name="save_map_style">Save Changes</string>

    <string name="map_uri_streets">mapbox://styles/mapbox/streets-v9</string>
    <string name="map_uri_dark">mapbox://styles/mapbox/dark-v9</string>
    <string name="map_uri_light">mapbox://styles/mapbox/light-v9</string>
    <string name="map_uri_outdoors">mapbox://styles/mapbox/outdoors-v9</string>
    <string name="map_uri_satellite">mapbox://styles/mapbox/satellite-v9</string>
    <string name="map_uri_satellite_streets">mapbox://styles/mapbox/satellite-streets-v9</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="start_navigation">Start navigation</string>

    <string name="access_token" translatable="false">pk.eyJ1IjoiZGF5bmU5NSIsImEiOiJjazZnOWhpYmUweWVsM2xtdmZvemxxZ3RmIn0.CCVZlLeLo_gsyIMA5iX08w</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="driving">Driving</string>
    <string name="todo">TODO</string>
    <string name="mode_of_transport">Mode of Transport</string>
    <string name="search_location">Search Location</string>
    <string name="date_time">Date/Time : </string>
    <string name="mode_of_transport_row">Mode of Transport :</string>
    <string name="to">To : </string>
    <string name="from">From : </string>
    <string name="clear_log_history">Clear Trip Log History</string>
    <string name="trip_log">No trips records to show</string>
    <string name="start_message_tv">Tap an area on the map or the search icon below to set your destination !</string>
    <string name="todoi">TODOi</string>
    <string name="no">No</string>


</resources>
