<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daynemare.drifterapp.activities.MapViewActivity">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="38.9098"
        mapbox:mapbox_cameraTargetLng="-77.0295"
        mapbox:mapbox_cameraZoom="10">

        <Button
            android:id="@+id/startButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="650dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_button_disabled"
            android:fontFamily="@font/lato"
            android:enabled="false"
            android:text="@string/start_navigation"
            android:textColor="@color/mapboxGrayLight"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent"
            mapbox:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/customIconSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="@drawable/spinner_background"
            android:fontFamily="@font/lato" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btlocationSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="316dp"
            android:layout_marginTop="560dp"
            android:tint="@android:color/white"
            app:backgroundTint="@color/lightBlue"
            app:srcCompat="@android:drawable/ic_search_category_default" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btRefreshMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="316dp"
            android:layout_marginTop="480dp"
            android:tint="@android:color/white"
            app:backgroundTint="@color/lightBlue"
            app:srcCompat="@android:drawable/ic_menu_rotate" />

        <TextView
            android:id="@+id/fill"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#001945"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:paddingTop="50dp"
            android:textColor="#ffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:background="#001945"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:text="@string/start_message_tv"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivNavDrawer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:background="@color/lightBlue"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_dehaze_white_24dp" />

        <TextView
            android:id="@+id/tvStats"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:background="@color/lightBlue"
            android:fontFamily="@font/lato"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/mapboxWhite" />


    </com.mapbox.mapboxsdk.maps.MapView>


</androidx.constraintlayout.widget.ConstraintLayout>
